--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,12 +24,12 @@ markdown_extensions:
       clickable_checkbox: true
   - pymdownx.keys
   - pymdownx.blocks.tab
-  - pymdownx.superfences:
-      custom_fences:
-        # Mermaid diagrams
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:mermaid2.fence_mermaid_custom
+  - pymdownx.superfences
+      # custom_fences:
+      #   # Mermaid diagrams
+      #   - name: mermaid
+      #     class: mermaid
+      #     format: !!python/name:mermaid2.fence_mermaid_custom
 
 extra_javascript:
   # - javascripts/math.js  # De forma local PERO PESA MUCHO!!!! 
@@ -42,8 +42,8 @@ extra_javascript:
 plugins:
   - search
   - section-index
-  - mermaid2:
-      javascript: https://unpkg.com/mermaid@11.12.0/dist/mermaid.esm.min.mjs
+  # - mermaid2:
+  #     javascript: https://unpkg.com/mermaid@11.12.0/dist/mermaid.esm.min.mjs
 
 nav:
   - Home: index.md
