--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,10 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: "3.13.1"
+  jobs:
+    - pip install mkdocs-section-index pymdown-extensions pymdown-callouts
+
 
 # Build documentation with Mkdocs
 mkdocs:
@@ -20,4 +23,8 @@ mkdocs:
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
-        
+
+formtas:
+  - pdf
+  - epub
+  - html
