--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,7 +10,7 @@ build:
   tools:
     python: "3.13.1"
   jobs:
-    - list (['pip install mkdocs-section-index pymdown-extensions pymdown-callouts'])
+    - list: (['pip install mkdocs-section-index pymdown-extensions pymdown-callouts'])
     #- pip install mkdocs-section-index pymdown-extensions pymdown-callouts
 
 
@@ -25,7 +25,7 @@ mkdocs:
 #    install:
 #    - requirements: docs/requirements.txt
 
-formtas:
+formats:
   - pdf
   - epub
   - html
