--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,7 +10,9 @@ build:
   tools:
     python: "3.13.1"
   jobs:
-    - list: (['pip install mkdocs-section-index pymdown-extensions pymdown-callouts'])
+    pre_install:
+      - pip install mkdocs-section-index pymdown-extensions pymdown-callouts 
+    #- list: (['pip install mkdocs-section-index pymdown-extensions pymdown-callouts'])
     #- pip install mkdocs-section-index pymdown-extensions pymdown-callouts
 
 
